# eltris

./: .gitignore  Cargo.toml  README.md  cargo.toml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  CHANGELOG.md  DATA_MODELS.md  EDGE_CASES.md  OPERATIONS.md  PAYMENT_FLOWS.md
eltris-api/: Cargo.toml
eltris-api/src/: routes.rs  server.rs
eltris-arbitrage/: Cargo.toml
eltris-arbitrage/src/: engine.rs  lib.rs  strategy.rs
eltris-cli/: Cargo.toml
eltris-cli/src/: main.rs
eltris-core/: Cargo.toml
eltris-core/src/: error.rs
eltris-exchange/: Cargo.toml
eltris-exchange/src/: client.rs
eltris-lightning/: Cargo.toml
eltris-lightning/src/: lib.rs  node.rs  swap.rs
escrow-engine/: Cargo.toml
escrow-engine/src/: error.rs  escrow_engine.rs  lib.rs  models.rs  node.rs  nostr_publisher.rs  payment_coordinator.rs  reputation_indexer.rs  task_manager.rs  verification_service.rs
