[workspace]
resolver = "2"
members = [
    "eltris-core",
    "eltris-exchange",
    "eltris-lightning",
    "eltris-arbitrage",
    "eltris-api",
    "eltris-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eltris Team"]
license = "MIT"
repository = "https://github.com/eltris/eltris"
description = "High-performance Bitcoin arbitrage engine with Lightning Network integration"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"
bitcoin = "0.31"
lightning = "0.0.118"
lightning-net-tokio = "0.0.118"
secp256k1 = "0.28"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
config = "0.13"
dotenv = "0.15" 