[package]
name = "eltris-arbitrage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Arbitrage engine for Eltris"

[dependencies]
eltris-core = { path = "../eltris-core" }
eltris-lightning = { path = "../eltris-lightning" }
tokio = { workspace = true }
rust_decimal = { workspace = true } 