[package]
name = "eltris-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Eltris"

[dependencies]
eltris-core = { path = "../eltris-core" }
eltris-arbitrage = { path = "../eltris-arbitrage" }
tokio = { workspace = true }
clap = { workspace = true } 