[package]
version = "0.1.0"
edition = "2024"
name = "escrow-engine"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (TODO: Add when implementing persistent storage)
# sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid", "json"], default-features = false }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Lightning Development Kit
ldk-node = "0.6.2"

# Bitcoin utilities
bitcoin = "0.31"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand"] }

# Nostr integration
nostr-sdk = "0.29"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }
